<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas..com/apk/res-auto"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/choice_bg"
    tools:context=".ActivityChoice">

    <EditText
        android:id="@+id/pseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:fontFamily="@font/tommy_soft_reg_out"
        android:hint="@string/PseudoRequis"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toTopOf="parent"
        app2:layout_constraintVertical_bias="0.077" />

    <TextView
        android:id="@+id/title_difficulte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/tommy_soft_black_out"
        android:text="@string/Difficulte"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton
            android:id="@+id/radioButton_facile"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:checked="true"
            android:fontFamily="@font/tommy_soft_reg_out"
            android:onClick="onRadioButtonClicked"
            android:text="@string/facile"
            android:textColor="@color/textColorWhite" />

        <RadioButton
            android:id="@+id/radioButton_moyen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/tommy_soft_reg_out"
            android:onClick="onRadioButtonClicked"
            android:text="@string/moyen"
            android:textColor="@color/textColorWhite" />

        <RadioButton
            android:id="@+id/radioButton_difficile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/tommy_soft_reg_out"
            android:onClick="onRadioButtonClicked"
            android:text="@string/difficile"
            android:textColor="@color/textColorWhite" />

        <TextView
            android:id="@+id/titleTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/tommy_soft_black_out"
            android:gravity="center"
            android:text="@string/Theme"
            android:textColor="@color/textColorWhite"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/spinnerTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:entries="@array/theme"
            android:spinnerMode="dropdown"
            android:textColor="@color/textColorWhite" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/BTN_Play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tommy_soft_black_out"
                android:text="@string/Jouer"
                android:textColor="@color/textColorBlack"
                app2:layout_constraintBottom_toBottomOf="parent"
                app2:layout_constraintEnd_toEndOf="parent"
                app2:layout_constraintHorizontal_bias="0.498"
                app2:layout_constraintStart_toStartOf="parent"
                app2:layout_constraintTop_toTopOf="parent"
                app2:layout_constraintVertical_bias="0.355" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RadioGroup>

</LinearLayout>